[gd_scene load_steps=6 format=3 uid="uid://fknw3fid6f4c"]

[ext_resource type="Script" uid="uid://dquxn3b3u4c0t" path="res://Scripts/scene_transition.gd" id="1_crfs3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vin40"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_8sxkv"]
resource_name = "transition"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.53333336, 2.0666666, 2.9666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_sd3nk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6nemr"]
_data = {
&"RESET": SubResource("Animation_sd3nk"),
&"transition": SubResource("Animation_8sxkv")
}

[node name="scene_transition" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_crfs3")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1164.0
offset_bottom = 661.0
theme_override_styles/panel = SubResource("StyleBoxFlat_vin40")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6nemr")
}

[node name="Loading" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 33.0
offset_right = 112.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 128
text = "Loading"

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-101.92171, -41)
scale = Vector2(1.1286354, 1)
points = PackedVector2Array(126, 268, 1000, 268)

[node name="PercentDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 237.0
offset_top = 205.0
offset_right = 307.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 128
text = "x"

[node name="DarknessOver" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="DarknessOver" to="." method="_on_darkness_over_timeout"]
